--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
          <div class="row">
             <div class="col-12">
-                <h2>Featured Work</h2>
+                <h2>My Featured Work</h2>
             </div>
         </div>
     <div class="row">
