--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container">
         <div class="row">                                                                                   <div class="col-md-6"><img src="http://placekitten.com.s3.amazonaws.com/homepage-samples/96/139.jpg"></div>       <div style="text-align:right;" class="col-md-6">
-            <h1>Ka'eo Ramos</h1>
+            <h1>Ka'eo Ramos/Couch Potato</h1>
             <h3>Front-End Ninja</h3>
         </div>  
     </div>
