--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
         <link rel="stylesheet" href="css/main.css">
         <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
+    
     <div class="container">
-        <div class="row">                                                                                   <div class="col-md-6"><img src="http://placekitten.com.s3.amazonaws.com/homepage-samples/96/139.jpg"></div>       <div style="text-align:right;" class="col-md-6">
-            <h1>Ka'eo Ramos/Couch Potato</h1>
-            <h3>Front-End Ninja</h3>
+        <div class="row">                                                                                         <div class="col-md-6"><img src="http://placekitten.com.s3.amazonaws.com/homepage-samples/96/139.jpg"></div>       <div style="text-align:right;" class="col-md-6">
+            <h1>Ka'eo Ramos</h1>
+            <h3>
+              <small class="text-muted">Front-End Ninja</small>
+            </h3>
         </div>  
     </div>
     <div class="row">
@@ -18,30 +23,47 @@
         </div>
          <div class="row">
             <div class="col-12">
-                <h2>My Featured Work</h2>
+                <h2>
+                  <small class="text-muted">My Featured Work</small>
+                </h2>
             </div>
         </div>
     <div class="row">
       <div class="col-4">
           <img src="http://placekitten.com.s3.amazonaws.com/homepage-samples/200/139.jpg">
             <h2 align="center">Kitty 1</h2>
-               <h3 align="center">Derp</h3>
+          <h3 class="text-center"><a href="#">https://placekitten.com/</a></h3>
         </div>
       <div class="col-4">
           <img src="http://placekitten.com.s3.amazonaws.com/homepage-samples/200/139.jpg">
             <h2 align="center">Kitty 2</h2>
-               <h3 align="center">Derp</h3>
+               <h3 class="text-center"><a href="#">https://placekitten.com/</a></h3>
         </div>
       <div class="col-4">
           <img src="http://placekitten.com.s3.amazonaws.com/homepage-samples/200/139.jpg">
             <h2 align="center">Kitty 3</h2>
-               <h3 align="center">Derp</h3>
+               <h3 class="text-center"><a href="#">https://placekitten.com/</a></h3>
         </div>
     </div>
     <div class="row">
-      <div class="col-3"></div>
-      <div class="col-6"></div>
-      <div class="col-3"></div>
+      <div class="col-3">
+          <blockquote class="blockquote blockquote-reverse">
+              <p class="mb-0">It's a very cute kitty.</p>
+  <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+</blockquote>
+        </div>
+      <div class="col-6">
+          <blockquote class="blockquote blockquote-reverse">
+  <p class="mb-0">It's a very cute kitty</p>
+  <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+</blockquote>
+        </div>
+      <div class="col-3">
+          <blockquote class="blockquote blockquote-reverse">
+  <p class="mb-0">It's a very cute kitty</p>
+  <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+</blockquote>
+        </div>
     </div>
   </div>
 </body>
