--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
             </h2>
             <center><img src="FlappyLemon.gif"></center>
         </div>
+        <div class="col-6">
+            <h1>Hi Guys!</h1>
+            <p>I am Ka'eo Ramos and I'm here to have fun and do codes so that in the future, I'll have choices to pick from and do it as my job to get a lot of money. Oh and I also like playing video games like Call Of Duty, Assassin's Creed, Minecraft, Resident Evil, Dark Souls 2, Dragon Ball Xenoverse, and etc. A few other things about me is that I don't go outside a lot, I'm a couch potato, and just in case you guys are wondering if I have friends then, yes I do have friends, I don't like school but I have to get through it so I can have a place to live in and the freedom that I want.</p>
     </div>
+        
          <div class="row">
             <div class="col-6">
                 <h2>
